# NlTxGNN

./: README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: indexnow.yml  interaction-update-check.yml  news-monitor.yml  pages.yml
data/news/: nl_news.json  synonyms.json
docs/: CNAME  _config.yml  index.md  robots.txt
docs/_drugs/: db00003.md  db00009.md  db00054.md  db00136.md  db00169.md  db00177.md  db00178.md  db00181.md  db00184.md  db00186.md  db00188.md  db00222.md  db00231.md  db00244.md  db00248.md  db00270.md  db00284.md  db00287.md  db00294.md  db00304.md  db00315.md  db00316.md  db00321.md  db00334.md  db00335.md  db00337.md  db00349.md  db00350.md  db00352.md  db00363.md  db00367.md  db00381.md  db00391.md  db00404.md  db00426.md  db00437.md  db00440.md  db00450.md  db00455.md  db00482.md  (+105 more)
docs/_includes/: head_custom.html
docs/assets/js/: drug-lookup.js
docs/data/: drugs.json  keywords.json  search-index.json
docs/fhir/: metadata  metadata.json
docs/fhir/ClinicalUseDefinition/: DB00391-1.json  DB00391-1000.json  DB00391-10000.json  DB00391-100000.json  DB00391-100001.json  DB00391-100002.json  DB00391-100004.json  DB00391-100005.json  DB00391-100006.json  (+49976 more)
docs/smart/: app.html  launch.html  standalone.html
prompts/: pharmacist_v5_storytelling.md
scripts/: batch_collect_bundles.py  batch_generate_reports.py  download_dutch_data.py  drug_list.json  generate_drug_pages.py  generate_fhir_resources.py  process_fda_data.py  run_kg_prediction.py
scripts/fetchers/: __init__.py  nl_news.py
src/nltxgnn/: __init__.py
(+148 files in other folders)
